--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "langchain": "^0.0.84",
+    "lucide-react": "^0.378.0",
     "next": "13.4.4",
+    "next-themes": "^0.3.0",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
